--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,8 +15,8 @@
     <td><%= product.name %></td>
     <td><%= product.description %></td>
     <td><%= product.price %></td>
-    <td><%= product.manufacturer_id%></td>
-    <td><%= product.category_id %></td>
+    <td><%= product.manufacturer.name %></td>
+    <td><%= product.category.name %></td>
     <td><%= link_to 'Show', product %></td>
     <td><%= link_to 'Edit', edit_product_path(product) %></td>
     <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
