--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,439 @@
  *= require_self
  *= require_tree .
  */
+
+
+#containeraboutus {
+	clear: both;
+	border: 1px solid black;
+	margin: auto;
+	width: 1000px;
+	height: 500px;
+	background-color: rgb(212, 239, 250);
+}
+
+#about{
+	float:right;
+	margin-right: 10px;
+	margin-top: 15px;
+	color: #000000;
+	text-decoration: none;
+}
+
+#aboutus {
+	background-color: rgb(240, 247, 255);
+	margin-left: 120px;
+	margin-top: 30px;
+	padding: 15px;
+	height: 420px;
+	width: 700px;
+}
+
+#aboutus a:link {
+	color: #000000;
+}
+
+#aboutus a:hover {
+	text-decoration: none;
+}
+
+.user {
+	margin-left: 15px;
+}
+
+ul.userList {
+	list-style-type: square;
+}
+
+.userimage, .userList {
+	float: left;
+}
+
+.horizontalrule {
+	clear: both;
+}
+
+@font-face {
+	font-family: customFont;
+	src: url('../BEBAS.ttf')
+}
+
+body {
+	background-color: #DAE8F5;
+}
+
+.clear {
+	clear: both;
+}
+
+#header {
+	border: 1px solid black;
+	width: 1000px;
+	height: 100px;
+	margin: auto;
+	position: relative;
+}
+
+#title {
+	text-align: left;
+	float: left;
+	margin-top: 30px;
+	margin-left: 75px;
+	font-family: customFont;
+	font-size: xx-large;
+}
+
+#userInfo {
+	text-align: right;
+	clear: right;
+	width: 200px;
+	margin: 25px 10px 10px;
+	float: right;
+}
+
+a#logo {
+	width: 100px;
+	height: 100px;
+	text-align: left;
+	float: left;
+	display: block;
+}
+
+#validators {
+	padding-top: 10px;
+	padding-bottom: 5px;
+	margin-left: 10px;
+}
+
+#footer {
+	margin: auto;
+	text-align: left;
+	border-bottom: 1px solid black;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	width: 1000px;
+	background-color: #EBF2F5;
+}
+
+#container {
+	clear: both;
+	border: 1px solid black;
+	margin: auto;
+	width: 1000px;
+	background-color: #85CEED;
+}
+
+#sidebar {
+	height: 100%;
+	float: left;
+	width: 210px;
+}
+
+#sidebar #lastView img {
+	width: 180px;
+}
+
+li.categoryItem {
+	list-style: none;
+}
+
+li.categoryItem a:link {
+	text-decoration: none;
+	color: #000000
+}
+
+li.categoryItem a:hover {
+	color: #5F9EA0;
+	background-color: #D4EFFA;
+}
+
+#featuredProducts a:link, .productname a:link, #searchProduct a:link {
+	text-decoration: none;
+	font-weight: bold;
+	color: #000000;
+}
+
+#featuredProducts a:hover, .productname a:hover {
+	color: #949494;
+}
+
+#productCategories {
+	margin-bottom: 111px;
+}
+
+#featuredProduct {
+	float: left;
+	background-color: #D4EFFA;
+	width: 790px;
+}
+
+#lastView {
+	text-align: center;
+}
+
+.product {
+	margin: 10px;
+	padding: 10px;
+	background-color: #f0f7ff;
+}
+
+.previousproduct {
+	float: left;
+}
+
+.nextproduct {
+	text-align: right;
+}
+
+.product {
+	min-height: 350px;
+}
+
+.productphoto {
+	float: left;
+}
+
+.productname {
+	clear: left;
+	font-size: 16pt;
+	font-weight: bold;
+}
+
+.productprice {
+	text-align: right;
+	color: #5f9ea0;
+	font-size: 36pt;
+	font-weight: bold;
+}
+
+#productLeft {
+	float: left;
+	border: 0px solid black;
+	margin-right: 23px;
+	width: 190px;
+}
+
+#productCenter {
+	float: left;
+	margin-right: 23px;
+	width: 190px;
+	border: 0px solid black;
+}
+
+#productRight {
+	float: left;
+	text-align: right;
+	width: 190px;
+	border: 0px solid black;
+}
+
+#featuredProducts {
+	padding-top: 15px;
+	float: left;
+	background-color: #D4EFFA;
+	width: 790px;
+}
+
+#featuredProducts2 {
+	border: 0px solid black;
+	width: 630px;
+	margin-left: 77px;
+	margin-bottom: 20px;
+}
+
+#sortBar {
+	text-align: center;
+	margin: 0px 0px 5px 0px;
+	padding: 0px;
+	clear: both;
+}
+
+li.menuItem {
+	display: inline;
+	border: 0px solid black;
+	background-color: #f0f7ff;
+}
+
+.productList {
+	border: 1px solid black;
+}
+
+table.products {
+	white-space: normal;
+	margin: auto;
+	margin-bottom: 20px;
+	word-wrap: break-word;
+	table-layout: fixed;
+	width: 700px;
+}
+
+.productListPhoto {
+	width: 150px;
+}
+
+td.productListDescription {
+	text-align: center;
+	width: 450px;
+}
+
+.productListPrice {
+	text-align: center;
+}
+
+.productInfo {
+	background-color: #f0f7ff;
+}
+
+.featuredproductname {
+	text-align: center;
+}
+
+.manufacturerProductImage2 {
+	width: 80px;
+	height: 80px;
+}
+
+.productImage {
+	min-width: 190px;
+	height: 190px;
+}
+
+.productListImage {
+	width: 150px;
+	height: 150px;
+}
+
+.featuredProductImage {
+	width: 190px;
+	height: 190px;
+}
+
+/*  product.html  */
+
+.backButton {
+	margin-left: 10px;
+}
+
+#mainArea {
+	float: left;
+	width: 790px;
+	background-color: #D4EFFA;
+}
+
+#breadcrumb {
+	text-align: left;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	border-left: 1px solid black;
+	border-right: 1px solid black;
+	width: 1000px;
+	margin: auto;
+}
+
+#productName {
+	text-align: center;
+}
+
+#productPhoto {
+	margin: 15px 1px 5px 10px;
+}
+
+#manufacturerName {
+	text-align: center;
+}
+
+#manufacturerProducts {
+	margin-left: 15px;
+}
+
+#photosProduct {
+
+}
+
+#descriptionProduct {
+	margin: 0 0 20px 0;
+}
+
+.manufacturerProductimage {
+	float: left;
+	margin-top: 15px;
+	margin-right: 15px;
+}
+
+#fixedManufacturerProductsLabel, #fixedManufacturerNameLabel, #fixedManufacturerProductNameLabel, #fixedLastViewLabel {
+	text-align: center;
+	margin-top: 15px;
+}
+
+#fixedReviewLabel {
+	clear: left;
+}
+
+.fixedLabel {
+	font-size: x-large;
+	text-decoration: underline;
+}
+
+#photosProduct {
+	width: 630px;
+	margin-left: 57px;
+}
+
+.photoLeft {
+	float: left;
+	margin-right: 23px;
+}
+
+.photoCenter {
+	float: left;
+	margin-right: 23px;
+}
+
+.photoRight {
+	float: left;
+	text-align: right;
+}
+
+.productImage {
+	max-height: 50%;
+	max-width: 50%;
+	display: block;
+	margin: auto;
+}
+
+#reviewsProduct {
+	clear: left;
+}
+
+#searchform {
+	margin: 5px;
+	width: 250px;
+	float: right;
+	margin-right: 100px;
+}
+
+#themedrop {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+}
+
+#searchProduct {
+	border: 1px solid black;
+	float: left;
+	background-color: #D4EFFA;
+	width: 788px;
+}
+
+#searchProductList {
+	margin-left: 60px;
+}
+
+#searchBox {
+	width: 170px;
+}
+
+#validators a:link {
+	text-decoration: none;
+}
+
