--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
+//= require_tree .
+
 /*  about.html  */
 
 #containeraboutus {
@@ -112,11 +114,6 @@ a#logo {
 	background-color: #85CEED;
 }
 
-#sidebar {
-	height: 100%;
-	float: left;
-	width: 210px;
-}
 
 #sidebar #lastView img {
 	width: 180px;
@@ -160,11 +157,6 @@ li.categoryItem a:hover {
 	text-align: center;
 }
 
-.product {
-	margin: 10px;
-	padding: 10px;
-	background-color: #f0f7ff;
-}
 
 .previousproduct {
 	float: left;
@@ -296,129 +288,3 @@ td.productListDescription {
 	width: 190px;
 	height: 190px;
 }
-
-/*  product.html  */
-
-.backButton {
-	margin-left: 10px;
-}
-
-#mainArea {
-	float: left;
-	width: 790px;
-	background-color: #D4EFFA;
-}
-
-#breadcrumb {
-	text-align: left;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border-left: 1px solid black;
-	border-right: 1px solid black;
-	width: 1000px;
-	margin: auto;
-}
-
-#productName {
-	text-align: center;
-}
-
-#productPhoto {
-	margin: 15px 1px 5px 10px;
-}
-
-#manufacturerName {
-	text-align: center;
-}
-
-#manufacturerProducts {
-	margin-left: 15px;
-}
-
-#photosProduct {
-
-}
-
-#descriptionProduct {
-	margin: 0 0 20px 0;
-}
-
-.manufacturerProductimage {
-	float: left;
-	margin-top: 15px;
-	margin-right: 15px;
-}
-
-#fixedManufacturerProductsLabel, #fixedManufacturerNameLabel, #fixedManufacturerProductNameLabel, #fixedLastViewLabel {
-	text-align: center;
-	margin-top: 15px;
-}
-
-#fixedReviewLabel {
-	clear: left;
-}
-
-.fixedLabel {
-	font-size: x-large;
-	text-decoration: underline;
-}
-
-#photosProduct {
-	width: 630px;
-	margin-left: 57px;
-}
-
-.photoLeft {
-	float: left;
-	margin-right: 23px;
-}
-
-.photoCenter {
-	float: left;
-	margin-right: 23px;
-}
-
-.photoRight {
-	float: left;
-	text-align: right;
-}
-
-.productImage {
-	max-height: 50%;
-	max-width: 50%;
-	display: block;
-	margin: auto;
-}
-
-#reviewsProduct {
-	clear: left;
-}
-
-#searchform {
-	margin: 5px;
-	width: 250px;
-	float: right;
-	margin-right: 100px;
-}
-
-#themedrop {
-	position: absolute;
-	top: 5px;
-	right: 5px;
-}
-
-#searchProduct {
-	border: 1px solid black;
-	float: left;
-	background-color: #D4EFFA;
-	width: 788px;
-}
-
-#searchProductList {
-	margin-left: 60px;
-}
-
-#searchBox {
-	width: 170px;
-}
-
