--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body>
 
     <div id="header">
-        <a id="logo" href="#"><%= image_tag "logo-blue.png" %> </a>
+    	<%= link_to image_tag("logo-blue.png"), root_url, id: "logo" %>
         <div id="title">FooBar Online Store</div>
                
         <form id="search form" action="search.html">
