--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 	<%= render 'layouts/categories_sidebar' %>
 </div>
 
-<div id="featuredProduct">
+<div id="main">
 <h1>Featured Products</h1>
 
 <table>
