--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <div id="sidebar">
 	<%= render 'layouts/categories_sidebar' %>
 </div>
-<div class="product">
+<div id="main">
 <p id="notice"><%= notice %></p>
 
 <h2><%= @category.name %></h2>
