--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,20 +16,17 @@
     	<%= link_to image_tag("logo-blue.png"), root_url, id: "logo" %>
         <div id="title">FooBar Online Store</div>
                
-        <form id="search form" action="search.html">
-        	<div>
-        		<select id="theme drop" name="theme">
-	                <option value="1">Tema 1</option>
-	                <option value="2">Tema 2</option>
-        		</select>
-	            <input id="searchBox" type="text" name="search query" value="" />
-	            <input id="lastViewedProductId" type="hidden" name="lastproductid" />
-	            <input type="submit" value="Search" />
-           </div>
-        </form>
-        
+        <%= form_tag("/search", :method => 'get', :id =>"searchForm") do %>     
+        	<p>
+        		<%= text_field_tag :search, params[:search]%>
+        		<%= submit_tag "Search", :name => nil %>     	
+        	</p>
+        <% end %> 
+ 
+         
         <div id="userInfo">
-            Utilizador: An&#243;nimo <a href="#"><img src="images/shoppingbasket.png" alt="Shopping basket" /></a>
+            Utilizador: An&#243;nimo <br/>
+            <a href="#"> My shopping cart</a>
         </div> 
         
     </div>
