--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
  
          
         <div id="userInfo">
+        	<%= link_to "Sign Up", new_user_path %> ou <%= link_to "Sign In", new_session_path %> </br>
+
             Utilizador: An&#243;nimo <br/>
             <a href="#"> My shopping cart</a>
         </div> 
