--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
         	<% if current_user %>
         		Utilizador: <%= current_user.username %> <br/>
         		<%= link_to "O meu carrinho de Compras", current_user.cart %>
+        		<%= link_to "Log Out", session_path("current"), method: "delete" %>
         	<% else %>
 				<%= link_to "Sign Up", new_user_path %> ou <%= link_to "Sign In", new_session_path %> 
 			<% end %> </br>
@@ -35,6 +36,7 @@
         
     </div>
 	<div id="container">
+		<%= notice %>
 		<%= yield %>
     </div>
 
