--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,8 +11,8 @@
 	
 	<div id="manufacturerProducts"> 
 		<h4>Other Products from this manufacturer</h4>
-		<% @related_products.each do |product| %>
-			<%= image_tag(product.photos.first.url, class: "manufacturerProductImage") %>
+		<% @manufacturer_products.each do |product| %>
+			<%= link_to(image_tag(product.photos.first.url, class: "manufacturerProductImage"), product) %>
 		<% end %>
 	</div>
  </div>
