--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,7 @@
 
 <table>
   <tr>
+  	<th>Photo</th>
     <th>Name</th>
     <th>Description</th>
     <th>Price</th>
@@ -17,6 +18,7 @@
 
 <% @products.each do |product| %>
   <tr>
+  	<td><%= image_tag(product.photos.first.url) %></td>
     <td><%= product.name %></td>
     <td><%= product.description %></td>
     <td><%= product.price %></td>
