Events notice changed to be displayed in index page when logging in instead showing in application layout

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <div id="sidebar">
 	<%= render 'layouts/categories_sidebar' %>
 </div>
-
+<p id="notice"><%= notice %></p>
 <div id="main">
 <h1>Featured Products</h1>
 
