--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,9 +24,9 @@
 		Order date: <%= order.created_at %><br />
 		<% order.cart_items.each do |item| %>
 			<% order_total_price += item.total_price %>
-			<%= link_to(item.product.name, product_path(item.product)) %> &times; <%= item.quantity %> = <%= item.total_price %><br />
+			<%= link_to(item.product.name, product_path(item.product)) %> &times; <%= item.quantity %> = <%= number_to_currency(item.total_price, :unit => "€") %><br />
 		<% end %>
-		<br />Order total: <%= order_total_price %><hr>
+		<br />Order total: <%= number_to_currency(order_total_price, :unit => "€") %><hr>
 	<% end %>
 </p>
 
