Added pagination in some views

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,7 +15,7 @@
 	</div>
 <% end %>
 
-
+<%= will_paginate @products %>
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
 </div>
