--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@product) do |f| %>
+
+<%= form_for @product, :html => {:name => 'text_form'} do |f|%>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -33,12 +34,13 @@
       <%= f.label :manufacturer %><br />
       <%= f.select :manufacturer_id, @manufacturers.map {|m| [m.name,m.id] } %>
     </div>
-    
+
+
       <div class="field">
       <%= f.fields_for :photos do |builder| %>
       <p>
-      	<%= builder.label :url, "Photo URL" %><br />
-      	<%= builder.text_field :url %>
+      	<%= builder.label :url, "Photo URL"%><br />
+      	<%= builder.text_field :url%>
       </p>
 	  <% end %>	
     </div>
