--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 	<head>
         <title>FooBar Online Store - Página Inicial</title>
 
- 	 	<%= stylesheet_link_tag    "application", :media => "all" %>
+ 	 	<%= stylesheet_link_tag    "application"%>
   		<%= javascript_include_tag "application" %>
  		 <%= csrf_meta_tags %>
 	</head>
