Updated search and categories view to use new product partial

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,15 +5,8 @@
 <p id="notice"><%= notice %></p>
 
 <h2><%= @category.name %></h2>
-<% @products.each do |product| %>
-	<div>
-		<h3><%= product.name %></h3>
-		<div class="image">
-			<%= image_tag product.photos.first.url %>
-		</div>
-		<p><%= product.description %></p>
-	</div>
-<% end %>
+<%= render :partial => "layouts/product", :collection => @products %>
+
 
 <%= will_paginate @products %>
 <%= link_to 'Edit', edit_category_path(@category) %> |
