--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -279,7 +279,7 @@ td.productListDescription {
 
 #main {
 	position: relative;
-	width:700px;
+	width:730px;
 	float: left;
 	margin: 10px;
 	padding: 10px;
@@ -315,6 +315,10 @@ td.productListDescription {
 	float: left;
 	width: 270px;
 	height: 260px;
+}
+
+.product .productImage img{
+	height: 240px;
 }
 
 .product .productInfo {
