--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+
+.productContainer{
+	border-bottom: 1px dashed black;
+}
+
+.image{
+	float:left;
+	padding-right: 15px;
+}
+
+.productDescription{
+	
+}
