Solved some merge issues, related products logic in the controller

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,15 +45,9 @@
 
 <h3>Related Products</h3>
 <div class="similarProducts">
-	<% i = 0 %>
-	<% @product.category.products.each do |product|%>
-		<% if @product != product && @product.manufacturer == product.manufacturer%>
-			<% if i != 6 %>
-				<%= link_to(image_tag(product.photos.first.url, class: "featuredProductImage"), product) %>
-				<%= product.photos.first.description %>
-				<% i=i+1 %>	
-			<% end %>
-		<% end %>
+	<% @related_products.each do |product| %>
+		<%= link_to(image_tag(product.photos.first.url, class: "featuredProductImage"), product) %>
+		<%= product.photos.first.description %>
 	<% end %>
 </div>
 
