Fixed bug in home view in whch clear div is not closed

--- a/app/views/layouts/_product.html.erb
+++ b/app/views/layouts/_product.html.erb
@@ -9,8 +9,7 @@
     	<p class="addToCart">
 	        <%= button_to "Add to cart", cart_items_path(:product_id => product) %>
 	    </p>
-
     </div>
-    <div class="clear">
+    <div class="clear"></div>
 
 </div>
