Update to review message when user is logged out — see last commit

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -61,7 +61,7 @@
 	<% end %>	
 	<%= will_paginate @reviews %>
 	<% if current_user.nil? %>
-		<p>Para a sua review faça login<p>
+		<p>Para escrever a sua review do produto faça login<p>
 	<% else %>
         <%= form_for [@product, Review.new] do |f| %>     
         	<p>
