--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -74,7 +74,7 @@
 	<% else %>
         <%= form_for [@product, Review.new] do |f| %>     
         	<p>
-	        		<%=	f.text_area :content %></br>
+	        		<%=	f.text_area :content, :rows => 10 %></br>
 	        		<%= f.submit "Post" %>   	
         	</p>
        <% end %> 
