Added admin panel, message when user tries to add to cart and hasn't logged in, and other stuff

--- a/app/views/layouts/_product.html.erb
+++ b/app/views/layouts/_product.html.erb
@@ -4,8 +4,8 @@
     	<h3><%= link_to product.name, product %></h3>
     	<b><%= number_to_currency(product.price, :unit => "€") %></b></br>
     	<%= truncate(product.description, :length => 256, :separator => ' ') %></br>
-    	<i>Manufactured by: <%= product.manufacturer.name %></i></br>
-    	<i>Category: <%= product.category.name %></i></br>
+    	<i>Manufactured by: <%= product.manufacturer.name unless product.manufacturer.nil? %></i></br>
+    	<i>Category: <%= product.category.name unless  product.category.nil? %></i></br>
     	<p class="addToCart">
 	        <%= button_to "Add to cart", cart_items_path(:product_id => product) %>
 	    </p>
