--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,22 +9,30 @@
 	    </p>
     <% end %>
 
+
 	<div id="manufacturer"> 
 		<h3>Manufacturer</h3>
-		<%= @product.manufacturer.name %>
+		<%= @product.manufacturer.name unless @product.manufacturer.nil? %>
 	</div>
 	
 	<div id="manufacturerProducts"> 
 		<h3>Other Products from this Manufacturer</h3>
-		<% @manufacturer_products.each do |product| %>
-			<%= link_to(image_tag(product.photos.first.url, class: "manufacturerProductImage"), product) %>
+		<% if @manufacturer_products %>
+			<% @manufacturer_products.each do |product| %>
+				<%= link_to(image_tag(product.photos.first.url, class: "manufacturerProductImage"), product) %>
+			<% end %>
 		<% end %>
+
 	</div>
  </div>
 
 <div id="main">
 
 <p id="notice"><%= notice %></p>
+
+<%= link_to 'Actualizar Produto', edit_product_path(@product) %> |
+<%= link_to 'Apagar Produto', @product, method: :delete, data: { confirm: 'Tem a certeza que quer apagar este produto?' } %> |
+<%= link_to 'Voltar', products_path %>
 
 	<h3>Description</h3> 
 	<%= @product.description %>
@@ -33,7 +41,7 @@
 	<%= number_to_currency(@product.price, :unit => "€") %>
 
 	<h3>Category</h3>
-	<%= @product.category.name %>
+	<%= @product.category.name unless  @product.category.nil? %>
 
 <h3>Photos</h3>
 <% @photos.each do |photo| %>
@@ -81,9 +89,6 @@
    <% end %>  
 </div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Back', products_path %>
 <div class="clear">
 
 </div>
