Add link to manage users in admin panel

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -21,6 +21,6 @@
 <% end %>
 <p><%= link_to "Criar um novo fabricante", new_manufacturer_path %></p>
 
-<h3>Gerir Users</h3>
+<h3><%= link_to "Gerir Users", users_path %></h3>
 
 </div>
