--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -22,5 +22,6 @@
 <p><%= link_to "Criar um novo fabricante", new_manufacturer_path %></p>
 
 <h3><%= link_to "Gerir Users", users_path %></h3>
+<p><%= link_to 'Criar um utilizador ou um administrador', new_user_path %></p>
 
 </div>
