--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,16 @@
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
+  
+  <% if (current_user && current_user.admin?) %>
+   <div class="field">
+    <%= f.label :admin %><br />
+    <%= f.check_box :admin %>
+  </div>
+  <% end %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
+ 
 <% end %>
