--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing users</h1>
+<h1>Listagem dos Utilizadores</h1>
 
 <table>
   <tr>
@@ -24,4 +24,4 @@
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Criar um utilizador', new_user_path %>
